# ani-tupi

./: .coverage  .env.example  .gitignore  CACHE_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  MELHORIAS_VIU_MEDIA.md  README.md  REFACTOR_SUMMARY.md  anilist.py  anilist_discovery.py  anilist_menu.py  build.py  cache_manager.py  cli.py  config.py  debug_menu.py  install-cli.py  install-viewer.sh  install.ps1  install.sh  loader.py  loading.py  main.py  manga_service.py  manga_tupi.py  menu.py  migrate_json_cache.py  models.py  plugin_manager.py  pyproject.toml  pytest.ini  repository.py  scraper_cache.py  simple_menu.py  video_player.py
.beads/: issues.jsonl
.github/workflows/: build-test.yml  ci.yml  release.yml  test.yml
commands/: __init__.py  anilist.py  anime.py  manga.py  sources.py
core/: anilist_service.py  anime_service.py  history_service.py
models/: __init__.py  models.py
openspec/: project.md
openspec/changes/add-anilist-sequel-detection/: tasks.md
openspec/changes/add-anilist-sequel-detection/specs/anilist-integration/: spec.md
openspec/changes/add-comprehensive-testing/: design.md  proposal.md
openspec/changes/add-mpv-ipc-keybindings/: design.md  proposal.md  tasks.md
openspec/changes/add-mpv-ipc-keybindings/specs/mpv-ipc-integration/: spec.md
openspec/changes/add-pydantic-validation/: design.md  proposal.md  tasks.md
openspec/changes/add-pydantic-validation/specs/configuration-management/: spec.md
openspec/changes/add-pydantic-validation/specs/data-validation/: spec.md
openspec/changes/add-pydantic-validation/specs/path-resolution/: spec.md
openspec/changes/archive/add-anilist-sequel-detection/: design.md  proposal.md
openspec/changes/archive/add-comprehensive-testing/: tasks.md
openspec/changes/archive/add-comprehensive-testing/specs/testing-infrastructure/: spec.md
openspec/changes/archive/fix-manga-cli/: proposal.md  tasks.md
openspec/changes/archive/fix-manga-cli/specs/manga-cli-refactor/: spec.md
openspec/changes/archive/refactor-modular-architecture/: IMPLEMENTATION.md  design.md  proposal.md  tasks.md
openspec/changes/archive/refactor-modular-architecture/specs/modular-architecture/: spec.md
openspec/changes/archive/refactor-simplify-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/refactor-simplify-structure/specs/: application-entry-point.md  command-routing.md  module-organization.md
openspec/changes/expand-comprehensive-testing/: design.md  proposal.md
openspec/changes/expand-comprehensive-testing/specs/anilist-integration/: spec.md
openspec/changes/expand-comprehensive-testing/specs/app-workflow/: spec.md
openspec/changes/expand-comprehensive-testing/specs/mpv-playback/: spec.md
openspec/changes/expand-comprehensive-testing/specs/scraper-search/: spec.md
openspec/changes/fix-manga-cli/: design.md
openspec/changes/fix-manga-cli/specs/manga-config/: spec.md
openspec/changes/refactor-tui-rich-inquirerpy/: design.md  proposal.md  tasks.md
openspec/changes/refactor-tui-rich-inquirerpy/specs/loading-indicators/: spec.md
openspec/changes/refactor-tui-rich-inquirerpy/specs/tui-framework/: spec.md
plugins/: animefire.py  animesonlinecc.py
scrapers/: __init__.py  loader.py
scrapers/plugins/: animefire.py  animesonlinecc.py  utils.py
services/: __init__.py  anilist_service.py  anime_service.py  history_service.py  manga_service.py  repository.py
tests/: README.md  conftest.py  test_anilist_service.py  test_config.py  test_e2e_anilist.py  test_e2e_search.py  test_e2e_video_extraction.py  test_history_service.py  test_models.py  test_plugin_loader.py  test_repository.py  test_repository_integration.py  test_video_player.py
tests/fixtures/: anilist_responses.json  anime_data.json  episode_data.json
ui/: anilist_menus.py  components.py
utils/: __init__.py  anilist_discovery.py  cache_manager.py  exceptions.py  logging.py  persistence.py  scraper_cache.py  title_utils.py  video_player.py
