[project]
name = "ani-tupi"
version = "0.1.0"
description = "Assista anime direto do terminal sem anúncios"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Eduardo Nery", email = "eduardonery1@gmail.com"}
]
license = {text = "GPL-3.0"}
keywords = ["anime", "cli", "streaming", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "requests-html>=0.10.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.26.1",
    "lxml>=5.3.0",
    "selenium>=4.26.1",
    "tqdm>=4.67.0",
    "textual>=6.11.0",
    "rich>=14.2.0",
]

[project.scripts]
ani-tupi = "main:cli"
manga-tupi = "manga_tupi:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
